--- a/example/index.html
+++ b/example/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>ngx-popper</title>
+  <title>ngx-smart-popper</title>
 </head>
 
 <body>
